<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    android:padding="@dimen/dp_standard"
    tools:context="com.example.android.quizzy.SummaryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/banner_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_standard"
            android:layout_weight="1"
            android:fontFamily="@font/fira_sans_bold"
            android:text="@string/banner_summary"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sp_text_medium" />

        <ImageView
            android:id="@+id/button_share"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_share"
            android:onClick="shareResult"
            android:src="@drawable/ic_share_black_36dp"
            android:visibility="gone" />

    </LinearLayout>

    <View
        style="@style/view_divider_horizontal"
        android:layout_marginTop="@dimen/dp_standard" />

    <ImageView
        android:id="@+id/image_summary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_marginTop="@dimen/dp_standard"
        android:contentDescription="@string/image_summary"
        android:src="@drawable/kiwi" />

    <ScrollView style="@style/layout_scrollview">

        <LinearLayout
            android:id="@+id/layout_summary_answers"
            style="@style/layout_vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/banner_question1"
                style="@style/layout_standard"
                android:text="@string/question1" />

            <TextView
                android:id="@+id/banner_answer1"
                style="@style/layout_standard"
                android:autoLink="web"
                android:text="@string/answer1" />

            <ImageView
                android:id="@+id/image_view_answer1"
                style="@style/layout_standard_image"

                android:contentDescription="@string/image_answer1"
                android:src="@drawable/wellington" />

            <View
                android:id="@+id/view_divider_summary1"
                style="@style/view_divider_horizontal"
                android:layout_marginTop="@dimen/dp_standard" />

            <TextView
                android:id="@+id/banner_question2"
                style="@style/layout_standard"
                android:text="@string/question2" />

            <TextView
                android:id="@+id/banner_answer2"
                style="@style/layout_standard"
                android:autoLink="web"
                android:text="@string/answer2" />

            <ImageView
                android:id="@+id/image_view_answer2"
                style="@style/layout_standard_image"
                android:contentDescription="@string/image_answer2"
                android:src="@drawable/haka" />

            <View
                android:id="@+id/view_divider_summary2"
                style="@style/view_divider_horizontal"
                android:layout_marginTop="@dimen/dp_standard" />

            <TextView
                android:id="@+id/banner_question3"
                style="@style/layout_standard"
                android:text="@string/question3" />

            <TextView
                android:id="@+id/banner_answer3"
                style="@style/layout_standard"
                android:autoLink="web"
                android:text="@string/answer3" />

            <ImageView
                android:id="@+id/image_view_answer3"
                style="@style/layout_standard_image"
                android:contentDescription="@string/image_answer3"
                android:src="@drawable/blackcaps" />

            <View
                android:id="@+id/view_divider_summary3"
                style="@style/view_divider_horizontal"
                android:layout_marginTop="@dimen/dp_standard" />

            <TextView
                android:id="@+id/banner_question4"
                style="@style/layout_standard"
                android:text="@string/question4" />

            <TextView
                android:id="@+id/banner_answer4"
                style="@style/layout_standard"
                android:autoLink="web"
                android:text="@string/answer4" />

            <ImageView
                android:id="@+id/image_view_answer4"
                style="@style/layout_standard_image"
                android:layout_marginBottom="@dimen/dp_standard"
                android:contentDescription="@string/image_answer4"
                android:src="@drawable/flag_nz" />

        </LinearLayout>

    </ScrollView>

    <View style="@style/view_divider_horizontal" />

    <Button
        android:id="@+id/button_bottom"
        style="@style/button_bottom"
        android:onClick="getGrade"
        android:text="@string/button_grade" />

</LinearLayout>