<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    android:padding="@dimen/dp_standard"
    tools:context="com.example.android.quizzy.CheckBoxActivity">

    <LinearLayout style="@style/layout_vertical">

        <ProgressBar
            android:id="@+id/progressbar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_standard"
            android:max="100"
            android:progress="0"
            android:progressTint="@color/colorAccent" />

        <TextView
            android:id="@+id/banner_question"
            style="@style/layout_header"
            android:layout_marginBottom="@dimen/dp_standard"
            android:text="@string/question2" />

        <View style="@style/view_divider_horizontal" />

    </LinearLayout>

    <ScrollView style="@style/layout_scrollview">

        <LinearLayout
            style="@style/layout_vertical"
            android:padding="@dimen/dp_standard">

            <CheckBox
                android:id="@+id/checkbox1"
                style="@style/radio_button_checkbox_standard"
                android:text="@string/checkbox1" />

            <CheckBox
                android:id="@+id/checkbox2"
                style="@style/radio_button_checkbox_standard"
                android:text="@string/checkbox2" />

            <CheckBox
                android:id="@+id/checkbox3"
                style="@style/radio_button_checkbox_standard"
                android:text="@string/checkbox3" />

            <CheckBox
                android:id="@+id/checkbox4"
                style="@style/radio_button_checkbox_standard"
                android:text="@string/checkbox4" />

        </LinearLayout>

    </ScrollView>

    <View style="@style/view_divider_horizontal" />

    <Button
        android:id="@+id/button_bottom"
        style="@style/button_bottom"
        android:onClick="submitAnswer"
        android:text="@string/button_next" />

</LinearLayout>
