<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    android:padding="@dimen/dp_standard"
    tools:context="com.example.android.quizzy.RadioButtonActivity">

    <LinearLayout style="@style/layout_vertical">

        <ProgressBar
            android:id="@+id/progressbar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_standard"
            android:max="100"
            android:progress="0"
            android:progressTint="@color/colorAccent" />

        <TextView
            android:id="@+id/banner_question"
            style="@style/layout_header"
            android:text="@string/question1" />

        <View
            style="@style/view_divider_horizontal"
            android:layout_marginTop="@dimen/dp_standard" />

    </LinearLayout>

    <ScrollView style="@style/layout_scrollview">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio1"
                style="@style/radio_button_standard"
                android:text="@string/radio1" />

            <RadioButton
                android:id="@+id/radio2"
                style="@style/radio_button_standard"
                android:text="@string/radio2" />

            <RadioButton
                android:id="@+id/radio3"
                style="@style/radio_button_standard"
                android:text="@string/radio3" />

            <RadioButton
                android:id="@+id/radio4"
                style="@style/radio_button_standard"
                android:text="@string/radio4" />

        </RadioGroup>

    </ScrollView>

    <View
        style="@style/view_divider_horizontal"
        android:layout_marginTop="@dimen/dp_standard" />

    <Button
        android:id="@+id/button_bottom"
        style="@style/button_bottom"
        android:onClick="submitAnswer"
        android:text="@string/button_next" />

</LinearLayout>
