<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    android:padding="@dimen/dp_standard"
    tools:context="com.example.android.quizzy.TrueFalseActivity">

    <ProgressBar
        android:id="@+id/progressbar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_standard"
        android:max="100"
        android:progress="0"
        android:progressTint="@color/colorAccent" />

    <TextView
        android:id="@+id/banner_question"
        style="@style/layout_header"
        android:layout_marginBottom="@dimen/dp_standard"
        android:text="@string/question4" />

    <View style="@style/view_divider_horizontal" />

    <RadioGroup
        android:id="@+id/radio_group"
        style="@style/layout_horizontal">

        <RadioButton
            android:id="@+id/radio_true"
            style="@style/radio_button_checkbox_standard"
            android:layout_weight="1"
            android:text="@string/radio_true"
            android:textAllCaps="true" />

        <RadioButton
            android:id="@+id/radio_false"
            style="@style/radio_button_checkbox_standard"
            android:layout_weight="1"
            android:text="@string/radio_false"
            android:textAllCaps="true" />

    </RadioGroup>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dp_standard"
        android:layout_weight="1"
        android:contentDescription="@string/image_true_false"
        android:src="@drawable/flag_au" />

    <View style="@style/view_divider_horizontal" />

    <Button
        android:id="@+id/button_bottom"
        style="@style/button_bottom"
        android:onClick="submitAnswer"
        android:text="@string/button_next" />

</LinearLayout>
