<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    android:padding="@dimen/dp_standard"
    tools:context="com.example.android.quizzy.EditTextActivity">

    <ProgressBar
        android:id="@+id/progressbar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_standard"
        android:max="100"
        android:progress="0"
        android:progressTint="@color/colorAccent" />

    <TextView
        android:id="@+id/banner_question"
        style="@style/layout_header"
        android:text="@string/question3" />

    <View
        style="@style/view_divider_horizontal"
        android:layout_marginTop="@dimen/dp_standard" />

    <EditText
        android:id="@+id/answer_entered"
        style="@style/layout_standard"
        android:hint="@string/hint_enter_answer"
        android:inputType="textCapWords" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View style="@style/view_divider_horizontal" />

    <Button
        android:id="@+id/button_bottom"
        style="@style/button_bottom"
        android:onClick="submitAnswer"
        android:text="@string/button_next" />

</LinearLayout>
